--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.1.0",
     "react-scripts": "4.0.3",
+    "router-dom": "^2.2.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
